; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_fork.c_copy_fs.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_fork.c_copy_fs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { %struct.fs_struct* }
%struct.fs_struct = type { i32, i32, i64 }
%struct.task_struct = type { i32 }

@current = common dso_local global %struct.TYPE_2__* null, align 8
@CLONE_FS = common dso_local global i64 0, align 8
@EAGAIN = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, %struct.task_struct*)* @copy_fs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @copy_fs(i64 %0, %struct.task_struct* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca %struct.task_struct*, align 8
  %6 = alloca %struct.fs_struct*, align 8
  store i64 %0, i64* %4, align 8
  store %struct.task_struct* %1, %struct.task_struct** %5, align 8
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @current, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load %struct.fs_struct*, %struct.fs_struct** %8, align 8
  store %struct.fs_struct* %9, %struct.fs_struct** %6, align 8
  %10 = load i64, i64* %4, align 8
  %11 = load i64, i64* @CLONE_FS, align 8
  %12 = and i64 %10, %11
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %36

14:                                               ; preds = %2
  %15 = load %struct.fs_struct*, %struct.fs_struct** %6, align 8
  %16 = getelementptr inbounds %struct.fs_struct, %struct.fs_struct* %15, i32 0, i32 0
  %17 = call i32 @write_lock(i32* %16)
  %18 = load %struct.fs_struct*, %struct.fs_struct** %6, align 8
  %19 = getelementptr inbounds %struct.fs_struct, %struct.fs_struct* %18, i32 0, i32 2
  %20 = load i64, i64* %19, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %28

22:                                               ; preds = %14
  %23 = load %struct.fs_struct*, %struct.fs_struct** %6, align 8
  %24 = getelementptr inbounds %struct.fs_struct, %struct.fs_struct* %23, i32 0, i32 0
  %25 = call i32 @write_unlock(i32* %24)
  %26 = load i32, i32* @EAGAIN, align 4
  %27 = sub nsw i32 0, %26
  store i32 %27, i32* %3, align 4
  br label %49

28:                                               ; preds = %14
  %29 = load %struct.fs_struct*, %struct.fs_struct** %6, align 8
  %30 = getelementptr inbounds %struct.fs_struct, %struct.fs_struct* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %30, align 4
  %33 = load %struct.fs_struct*, %struct.fs_struct** %6, align 8
  %34 = getelementptr inbounds %struct.fs_struct, %struct.fs_struct* %33, i32 0, i32 0
  %35 = call i32 @write_unlock(i32* %34)
  store i32 0, i32* %3, align 4
  br label %49

36:                                               ; preds = %2
  %37 = load %struct.fs_struct*, %struct.fs_struct** %6, align 8
  %38 = call i32 @copy_fs_struct(%struct.fs_struct* %37)
  %39 = load %struct.task_struct*, %struct.task_struct** %5, align 8
  %40 = getelementptr inbounds %struct.task_struct, %struct.task_struct* %39, i32 0, i32 0
  store i32 %38, i32* %40, align 4
  %41 = load %struct.task_struct*, %struct.task_struct** %5, align 8
  %42 = getelementptr inbounds %struct.task_struct, %struct.task_struct* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  %44 = icmp ne i32 %43, 0
  br i1 %44, label %48, label %45

45:                                               ; preds = %36
  %46 = load i32, i32* @ENOMEM, align 4
  %47 = sub nsw i32 0, %46
  store i32 %47, i32* %3, align 4
  br label %49

48:                                               ; preds = %36
  store i32 0, i32* %3, align 4
  br label %49

49:                                               ; preds = %48, %45, %28, %22
  %50 = load i32, i32* %3, align 4
  ret i32 %50
}

declare dso_local i32 @write_lock(i32*) #1

declare dso_local i32 @write_unlock(i32*) #1

declare dso_local i32 @copy_fs_struct(%struct.fs_struct*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
